# mustel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml  self_ref.md
.cursor/: mcp.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pattern_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: claude_prompt.txt  comparison_benchmark.py  extension_results.json  extract_findings.py  extract_realworld.py  paper.md  results.json  run_benchmark.py  run_extension_tests.py  score_independent.py  score_realworld.py  token_benchmark.py  token_test_prompt.txt
benchmarks/projects/project_auth/: app.py
benchmarks/projects/project_auth/.mustel/: cache.json
benchmarks/projects/project_backend/: app.py
benchmarks/projects/project_backend/.mustel/: cache.json
benchmarks/projects/project_independent/: app_vuln_api.py  app_vuln_web.py
benchmarks/token_data/: comparison_results.json  evfa_scan.txt  response_with_mustel.txt  response_without_mustel.txt  token_results.json
docs/: docs.html  index.html  robots.txt  sitemap.xml
learn/: README.md  cheatsheet.py  lesson_01_what_is_mustel.py  lesson_02_finding_pythons.py  lesson_03_comparing_packages.py  lesson_04_check_and_install.py  lesson_05_cli_complete.py  lesson_06_virtual_environments.py  quiz.py
mustel/: __init__.py  __main__.py  bootstrap.py  cache.py  cli.py  code_map.py  env.py  mcp_server.py  normalizer.py  runner.py  schema.py  watcher.py
mustel/engines/: __init__.py  bandit_engine.py  oxlint_engine.py  pipaudit_engine.py  ruff_engine.py
mustel/patterns/: __init__.py  asyncio.yaml  azure.yaml  boto3.yaml  cryptography.yaml  django.yaml  fastapi.yaml  flask.yaml  google_cloud.yaml  hashlib.yaml  json_module.yaml  jwt.yaml  loader.py  logging.yaml  numpy.yaml  os.yaml  pandas.yaml  paramiko.yaml  pickle.yaml  requests.yaml  socket.yaml  sqlite3.yaml  streamlit.yaml  subprocess.yaml  tempfile.yaml  threading.yaml  xml_module.yaml  yaml_module.yaml
tests/test_projects/project_async/: worker.py
tests/test_projects/project_auth/: auth.py
tests/test_projects/project_clean/: utils.py
tests/test_projects/project_hard/: hard.py
tests/test_projects/project_scraper/: scraper.py
