[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mustel"
version = "0.2.0"
description = "Non-AI static analysis layer for AI IDEs and coding agents — bug detection, security scanning, and CVE checking via MCP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Ameya Kulkarni", email = "mustel.oss@gmail.com" },
    { name = "Raunak Nayak", email = "mustel.oss@gmail.com" },
]
keywords = [
    "python",
    "security",
    "linter",
    "bug-detection",
    "ide",
    "mcp",
    "mcp-server",
    "ai-agent",
    "ai-coding",
    "static-analysis",
    "code-review",
    "vulnerability-scanner",
    "cursor",
    "windsurf",
    "claude",
    "bandit",
    "ruff",
    "pip-audit",
    "devtools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: Utilities",
]

dependencies = [
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
    "watchdog>=3.0.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
mustel = "mustel.cli:main"

[project.urls]
Homepage = "https://mustel.netlify.app"
Documentation = "https://mustel.netlify.app"
Repository = "https://github.com/mustel-py/mustel"
Issues = "https://github.com/mustel-py/mustel/issues"
Changelog = "https://github.com/mustel-py/mustel/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["mustel"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
